{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 35,
  "lineage": "fbe44161-0ab8-8ad7-cc7c-f0c39da4899c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dbbf71cd4843fc96",
            "association_id": "eipassoc-00780cfe07db76fdf",
            "domain": "vpc",
            "id": "eipalloc-0dbbf71cd4843fc96",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03de9c760b483bfe0",
            "private_dns": "ip-30-0-1-37.ec2.internal",
            "private_ip": "30.0.1.37",
            "public_dns": "ec2-44-206-36-193.compute-1.amazonaws.com",
            "public_ip": "44.206.36.193",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bef12ee7bc073414",
            "arn": "arn:aws:ec2:us-east-1:043925558327:instance/i-0765115e9f0967e42",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0765115e9f0967e42",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mkloud-guru",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0db901ada91ab202f",
            "private_dns": "ip-30-0-3-75.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "30.0.3.75",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bace234edfcc2ac6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0cdc1fa2262fb819c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05f34958131652f8c",
            "tags": {
              "Name": "ha-app-web-server-1"
            },
            "tags_all": {
              "Name": "ha-app-web-server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cdc1fa2262fb819c"
            ]
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.private_subnets",
            "data.aws_ami.amzn_linux"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bef12ee7bc073414",
            "arn": "arn:aws:ec2:us-east-1:043925558327:instance/i-004e5db947cd6d3ec",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-004e5db947cd6d3ec",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mkloud-guru",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c3008a73202ac918",
            "private_dns": "ip-30-0-4-6.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "30.0.4.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05891604deeec403c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0cdc1fa2262fb819c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0882290123903064b",
            "tags": {
              "Name": "ha-app-web-server-2"
            },
            "tags_all": {
              "Name": "ha-app-web-server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cdc1fa2262fb819c"
            ]
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.private_subnets",
            "data.aws_ami.amzn_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043925558327:internet-gateway/igw-032f426bb5cf24806",
            "id": "igw-032f426bb5cf24806",
            "owner_id": "043925558327",
            "tags": {
              "Name": "ha-app-igw"
            },
            "tags_all": {
              "Name": "ha-app-igw"
            },
            "vpc_id": "vpc-06d29558613a5622f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:043925558327:loadbalancer/app/ha-app-alb/64520066b3218273",
            "arn_suffix": "app/ha-app-alb/64520066b3218273",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ha-app-alb-1621475111.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:043925558327:loadbalancer/app/ha-app-alb/64520066b3218273",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ha-app-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c445c53f2ec0c553"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0871b919a36ad4557"
              },
              {
                "subnet_id": "subnet-0e33c70b248c8a4ce"
              }
            ],
            "subnets": [
              "subnet-0871b919a36ad4557",
              "subnet-0e33c70b248c8a4ce"
            ],
            "vpc_id": "vpc-06d29558613a5622f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:043925558327:listener/app/ha-app-alb/64520066b3218273/120f4d6c7fa1df37",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:043925558327:targetgroup/ha-app-tg/4cb307ca778aa3b6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:043925558327:listener/app/ha-app-alb/64520066b3218273/120f4d6c7fa1df37",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:043925558327:loadbalancer/app/ha-app-alb/64520066b3218273",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.main",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:043925558327:targetgroup/ha-app-tg/4cb307ca778aa3b6",
            "arn_suffix": "targetgroup/ha-app-tg/4cb307ca778aa3b6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:043925558327:targetgroup/ha-app-tg/4cb307ca778aa3b6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:043925558327:loadbalancer/app/ha-app-alb/64520066b3218273"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ha-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06d29558613a5622f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:043925558327:targetgroup/ha-app-tg/4cb307ca778aa3b6-20240322014154939500000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:043925558327:targetgroup/ha-app-tg/4cb307ca778aa3b6",
            "target_id": "i-0765115e9f0967e42"
          },
          "dependencies": [
            "aws_instance.web_servers",
            "aws_lb_target_group.main",
            "aws_security_group.web_sg",
            "aws_subnet.private_subnets",
            "data.aws_ami.amzn_linux"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:043925558327:targetgroup/ha-app-tg/4cb307ca778aa3b6-20240322014154899700000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:043925558327:targetgroup/ha-app-tg/4cb307ca778aa3b6",
            "target_id": "i-004e5db947cd6d3ec"
          },
          "dependencies": [
            "aws_instance.web_servers",
            "aws_lb_target_group.main",
            "aws_security_group.web_sg",
            "aws_subnet.private_subnets",
            "data.aws_ami.amzn_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dbbf71cd4843fc96",
            "association_id": "eipassoc-00780cfe07db76fdf",
            "connectivity_type": "public",
            "id": "nat-030be9e15524c911e",
            "network_interface_id": "eni-03de9c760b483bfe0",
            "private_ip": "30.0.1.37",
            "public_ip": "44.206.36.193",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e33c70b248c8a4ce",
            "tags": {
              "Name": "ha-app-natgw"
            },
            "tags_all": {
              "Name": "ha-app-natgw"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043925558327:route-table/rtb-0b15fc2de426cc7fa",
            "id": "rtb-0b15fc2de426cc7fa",
            "owner_id": "043925558327",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-030be9e15524c911e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ha-app-private-rt"
            },
            "tags_all": {
              "Name": "ha-app-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d29558613a5622f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043925558327:route-table/rtb-02322e943e9603afc",
            "id": "rtb-02322e943e9603afc",
            "owner_id": "043925558327",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-032f426bb5cf24806",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ha-app-public-rt"
            },
            "tags_all": {
              "Name": "ha-app-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d29558613a5622f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7a37ae8eed2fb36",
            "route_table_id": "rtb-0b15fc2de426cc7fa",
            "subnet_id": "subnet-05f34958131652f8c"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0943355c237801463",
            "route_table_id": "rtb-0b15fc2de426cc7fa",
            "subnet_id": "subnet-0882290123903064b"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-006e6933107330146",
            "route_table_id": "rtb-02322e943e9603afc",
            "subnet_id": "subnet-0e33c70b248c8a4ce"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de0ab0bb242c06f1",
            "route_table_id": "rtb-02322e943e9603afc",
            "subnet_id": "subnet-0871b919a36ad4557"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_subnets",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043925558327:security-group/sg-0c445c53f2ec0c553",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c445c53f2ec0c553",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb_sg",
            "name_prefix": "",
            "owner_id": "043925558327",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ha-app-alb-sg"
            },
            "tags_all": {
              "Name": "ha-app-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d29558613a5622f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043925558327:security-group/sg-0cdc1fa2262fb819c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cdc1fa2262fb819c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c445c53f2ec0c553"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web_sg",
            "name_prefix": "",
            "owner_id": "043925558327",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ha-app-web-sg"
            },
            "tags_all": {
              "Name": "ha-app-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06d29558613a5622f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043925558327:subnet/subnet-05f34958131652f8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "30.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f34958131652f8c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "043925558327",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ha-app-private-subnet-1"
            },
            "tags_all": {
              "Name": "ha-app-private-subnet-1"
            },
            "vpc_id": "vpc-06d29558613a5622f"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043925558327:subnet/subnet-0882290123903064b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "30.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0882290123903064b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "043925558327",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ha-app-private-subnet-2"
            },
            "tags_all": {
              "Name": "ha-app-private-subnet-2"
            },
            "vpc_id": "vpc-06d29558613a5622f"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043925558327:subnet/subnet-0e33c70b248c8a4ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "30.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e33c70b248c8a4ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "043925558327",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ha-app-public-subnet-1"
            },
            "tags_all": {
              "Name": "ha-app-public-subnet-1"
            },
            "vpc_id": "vpc-06d29558613a5622f"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043925558327:subnet/subnet-0871b919a36ad4557",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "30.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0871b919a36ad4557",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "043925558327",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ha-app-public-subnet-2"
            },
            "tags_all": {
              "Name": "ha-app-public-subnet-2"
            },
            "vpc_id": "vpc-06d29558613a5622f"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "random_shuffle.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043925558327:vpc/vpc-06d29558613a5622f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "30.0.0.0/16",
            "default_network_acl_id": "acl-04b41e52da977321a",
            "default_route_table_id": "rtb-006789722c426aa8d",
            "default_security_group_id": "sg-0ee36d4a92a3e8f76",
            "dhcp_options_id": "dopt-084ccde367e8f6647",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06d29558613a5622f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-006789722c426aa8d",
            "owner_id": "043925558327",
            "tags": {
              "Name": "ha-app-vpc"
            },
            "tags_all": {
              "Name": "ha-app-vpc"
            }
          }
        }
      ]
    }
  ]
}